Normalise select tag cross-browser (stops 'jumping'), plus other minor CSS improvements
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@3898 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -29,7 +29,7 @@ select,
 button {
 	font-size: 11px;
 	font-family: Verdana, Tahoma, sans-serif;
-	line-height: 1.54545454545455;
+	line-height: 1.54545454545455; /* 17px / 11px */
 }
 
 body {
@@ -105,19 +105,19 @@ h3 {
 }
 
 h1 {
-	font-size: 2em;
-	line-height: 1.27272727272727;
+	font-size: 2em; /* 22px / 11px */
+	line-height: 1.27272727272727; /* 28px / 22px */
 	margin: 0 0 .5em 0;
 }
 
 h2 {
-	font-size: 1.54545454545455em;
-	line-height: 1.41176470588235;
+	font-size: 1.54545454545455em; /* 17px / 11px */
+	line-height: 1.41176470588235; /* 24px / 17px */
 	margin: 0 0 .66666666666667em 0;
 }
 
 h3 {
-	font-size: 1.25em;
+	font-size: 1.27272727272727em; /* 14px / 11px */
 	margin: 0 0 .8em 0;
 }
 
@@ -236,8 +236,9 @@ a.navlink-active {
 }
 
 a.async.busy {
-    visibility: hidden;
+	visibility: hidden;
 }
+
 
 /* Forms
    ========================================================================== */
@@ -254,24 +255,23 @@ legend {
 
 input[type="text"],
 input[type="password"],
-textarea {
+textarea,
+select {
 	-webkit-appearance: none;
+	border-radius: 0;
 	-webkit-background-clip: padding;
 	 -khtml-background-clip: padding-box;
 	   -moz-background-clip: padding;
-	    -ms-background-clip: padding-box;
-	     -o-background-clip: padding-box;
 	        background-clip: padding-box;
 	margin: 0;
 	border: 1px solid;
 	border-color: #bbb #ddd #ddd #bbb;
-	border-radius: 0;
-	padding: .18181818181818em;
-	width: 100%;
+	padding: .18181818181818em .36363636363636em; /* 2px / 11px and 4px / 11px */
+	height: 2.09090909090909em; /* 23px / 11px */
 	background-color: #f5f5f5;
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
-			box-sizing: border-box;
+	        box-sizing: border-box;
 	/* IE7 box-sizing workaround */
 	*padding-right: 0;
 	*padding-left: 0;
@@ -283,25 +283,27 @@ textarea {
 
 input[type="text"],
 input[type="password"] {
+	width: 100%;
 	max-width: 22em;
 }
 
 input.input-medium {
 	width: 50%;
-	max-width: 11em;
+	max-width: 11.25em;
 }
 
 input.input-small {
 	width: 25%;
-	max-width: 5.5em;
+	max-width: 6.25em;
 }
 
 input.input-xsmall {
 	width: 18%;
-	max-width: 3.5em;
+	max-width: 3.7em;
 }
 
 textarea {
+	width: 100%;
 	min-height: 5.18181818181818em;
 	resize: vertical;
 	/* removes default vertical scrollbar in IE7-9 */
@@ -310,41 +312,61 @@ textarea {
 	vertical-align: top;
 }
 
-select {
-	-webkit-background-clip: padding;
-	 -khtml-background-clip: padding-box;
-	   -moz-background-clip: padding;
-	    -ms-background-clip: padding-box;
-	     -o-background-clip: padding-box;
-	        background-clip: padding-box;
-	margin: 0;
-	border: 1px solid;
-	border-color: #ddd #bbb #bbb #ddd;
-	background-color: #f5f5f5;
-	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-			box-sizing: border-box;
-	/* IE7 box-sizing workaround */
-	*padding-right: 0;
-	*padding-left: 0;
-	/* IE7 vertical alignment fix */
-	*padding-top: 1px;
-	*padding-bottom: 4px;
-	*height: auto;
+textarea,
+select[size],
+select[multiple] {
+	height: auto;
 }
+
+select[size="0"],
+select[size="1"] {
+  height: 1.8em;
+  /* IE7 */
+  *height: auto;
+}
+
+optgroup {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  color: #333333;
+}
+optgroup::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/* fixes for Safari, Chrome */
+@media (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  select[size="0"],
+  select[size="1"] {
+    background: #f5f5f5 url("select_arrow.svg") no-repeat right center;
+    padding-right: 16px;
+  }
+  select[size],
+  select[multiple],
+  select[multiple][size] {
+    background-image: none;
+    padding-right: .36363636363636em;
+  }
+}
+
+
+/* Buttons
+   ========================================================================== */
 
 button,
 input[type="reset"],
 input[type="submit"],
 input[type="button"],
-.txp-buttons a {
+.txp-buttons a,
+.action-create a {
 	display: inline-block;
 	-webkit-appearance: none;
 	-webkit-background-clip: padding;
 	 -khtml-background-clip: padding-box;
 	   -moz-background-clip: padding;
-	    -ms-background-clip: padding-box;
-	     -o-background-clip: padding-box;
 	        background-clip: padding-box;
 	cursor: pointer;
 	outline: 0;
@@ -359,6 +381,7 @@ input[type="button"],
 	color: #000;
 	background-color: #ddd;
 	-webkit-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, .3);
+	   -moz-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, .3);
 	        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, .3);
 	/* display and zoom IE7 fix for display:inline-block */
 	*display: inline;
@@ -379,7 +402,8 @@ button:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
 input[type="button"]:hover,
-.txp-buttons a:hover {
+.txp-buttons a:hover,
+.action-create a:hover {
 	background-color: #eee;
 }
 
@@ -387,7 +411,8 @@ button:active,
 input[type="reset"]:active,
 input[type="submit"]:active,
 input[type="button"]:active,
-.txp-buttons a:active {
+.txp-buttons a:active,
+.action-create a:active {
 	background-color: #ccc;
 }
 
@@ -454,8 +479,8 @@ span.spinner {
 	height: 16px;
 	background-image: url("../../txp_img/spinner.gif");
 	/* display and zoom IE7 fix for display:inline-block */
-    *display: inline;
-    *zoom: 1;
+	*display: inline;
+	*zoom: 1;
 }
 
 
@@ -517,20 +542,12 @@ td {
 	width: 18px;
 }
 
-.cell-label {
-	vertical-align: middle;
-}
-
 .txp-list td.unpublished {
 	color: #ccc;
 }
 
 .txp-list td.id {
 	white-space: nowrap;
-}
-
-.selected {
-	background-color: #f3f3f3;
 }
 
 div.multi-edit {
@@ -547,6 +564,23 @@ div.multi-edit {
 	/* display and zoom IE7 fix for display:inline-block */
 	*display: inline;
 	*zoom: 1;
+}
+
+.selected {
+	background-color: #f3f3f3;
+}
+
+.highlight,
+tr.moderate td {
+	background-color: #fff8dd;
+}
+
+tr.spam td {
+	background-color: #fff4f4;
+}
+
+.cell-label {
+	vertical-align: middle;
 }
 
 
@@ -687,15 +721,6 @@ ul.plain-list,
 	color: #3a87ad;
 }
 
-.highlight,
-tr.moderate td {
-	background-color: #fff8dd;
-}
-
-tr.spam td {
-	background-color: #fff4f4;
-}
-
 
 /* Global layout
    ========================================================================== */
@@ -705,7 +730,7 @@ tr.spam td {
 }
 
 .txp-body {
-    margin: 0 auto 1.5em;
+	margin: 0 auto 1.5em;
 	padding: 0 2em;
 	min-width: 82em;
 	max-width: 112em;
@@ -1013,13 +1038,13 @@ input.exp_day,
 input.exp_hour,
 input.exp_minute,
 input.exp_second {
-	width: 2.3em;
+	width: 2.4em;
 	text-align: center;
 }
 
 input.year,
 input.exp_year {
-	width: 3.5em;
+	width: 3.7em;
 	text-align: center;
 }
 
@@ -1102,14 +1127,6 @@ textarea#form {
 }
 
 
-/* Diagnostics page
-   ========================================================================== */
-
-textarea#diagnostics-detail {
-	height: 24.3333333333333em;
-}
-
-
 /* Preferences pages
    ========================================================================== */
 
@@ -1150,10 +1167,12 @@ textarea#plugin-install {
 	max-width: 600px;
 }
 
-tr .manage span, tr .plugin-prefs {
-    visibility: hidden;
+tr .manage span,
+tr .plugin-prefs {
+	visibility: hidden;
 }
 
-tr.active .manage span, tr.active .plugin-prefs {
-    visibility: visible;
+tr.active .manage span,
+tr.active .plugin-prefs {
+	visibility: visible;
 }
