--- a/textpattern/theme/remora/textpattern.css
+++ b/textpattern/theme/remora/textpattern.css
@@ -8,20 +8,19 @@
 	border-bottom: 1px solid #e2a005;
 	background-color: #ffda44;
 	/* Konqueror */
-	background-image: -khtml-gradient(linear, left top, left bottom, from(#ffda44), to(#fabc2b));
+	background-image:  -khtml-gradient(linear, left top, left bottom, from(#ffda44), to(#fabc2b));
 	/* Safari4+, Chrome */
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffda44), to(#fabc2b));
 	/* Safari5.1+, Chrome10+ */
 	background-image: -webkit-linear-gradient(#ffda44, #fabc2b);
 	/* Firefox3.6 */
 	background-image:    -moz-linear-gradient(#ffda44, #fabc2b);
-	/* IE10 */
-	background-image:     -ms-linear-gradient(#ffda44, #fabc2b);
 	/* Opera11.10+ */
 	background-image:      -o-linear-gradient(#ffda44, #fabc2b);
 	/* CSS3 Compliant */
 	background-image:         linear-gradient(#ffda44, #fabc2b);
 	-webkit-box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
+	   -moz-box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
 	        box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
 }
 
@@ -72,6 +71,7 @@
 	width: 15em;
 	background-color: #fff;
 	-webkit-box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
+	   -moz-box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
 	        box-shadow: 0 .25em .4em rgba(0, 0, 0, .15);
 }
 
